// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pop redirect to current URL:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "scene": "",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "scene": "",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "scene": "",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "index": 1,
    "key": "345678",
    "kind": "back",
    "length": 3,
    "n": -1,
    "pathname": "/third",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 2,
        "key": "345678",
        "pathname": "/third",
        "scene": "",
        "search": "",
        "url": "/third",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "THIRD",
    },
    "scene": "",
    "search": "",
    "status": 302,
    "url": "/third",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "THIRD",
}
`;

exports[`pop redirect to current URL:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop redirect to current URL:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop redirect to current URL:  - routes - SECOND - beforeEnter 1`] = `2`;

exports[`pop redirect to current URL:  - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/",
      Object {},
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
    Array [
      "/third",
      Object {},
      "345678",
    ],
  ],
  "index": 2,
}
`;

exports[`pop redirect to current URL:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "scene": "",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "scene": "",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 2,
    "key": "345678",
    "kind": "push",
    "length": 3,
    "n": 1,
    "params": Object {},
    "pathname": "/third",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "universal": false,
    "url": "/third",
  },
  "title": "@@skiprudy/SET_FROM - {\\"ref\\":{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"state\\":{},\\"hash\\":\\"\\",\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/second\\",\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"key\\":\\"345678\\",\\"scene\\":\\"\\",\\"index\\":1}}}",
}
`;

exports[`pop redirect to current URL:  - title 1`] = `"THIRD"`;

exports[`pop redirect to current URL:  - windowLocation 1`] = `"/second"`;
